FISH-6259 arg add-opens in MDBTests